--- a/reception/index.html
+++ b/reception/index.html
@@ -816,9 +816,7 @@
                     </li>
                 </ul>
                 <br/><br/>
-                <p>Copyright &copy; 2016.Company name All rights reserved.<a target="_blank"
-                                                                             href="http://www.freemoban.com/">www.freemoban.com</a>
-                </p>
+                <p>Copyright &copy; 2016.Company name All rights reserved. 蜀ICP备15020564号</p>
             </div>
         </div>
     </div>
