--- a/reception/index.html
+++ b/reception/index.html
@@ -95,39 +95,26 @@
             <div class="row">
                 <div class="col-md-6 wow slideInLeft hidden-xs hidden-sm">
                     <div class="contact_form">
-                        <h3><i class="fa fa-envelope-o grd1 global-radius"></i> QUICK APPOINTMENT</h3>
+                        <h3><i class="fa fa-envelope-o grd1 global-radius"></i> 联系方式</h3>
                         <form id="contactform1" class="row" name="contactform" method="post">
                             <fieldset class="row-fluid">
                                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <input type="text" name="first_name1" id="first_name1" class="form-control" placeholder="First Name">
+                                    <input type="text" name="name" id="first_name1" class="form-control" placeholder="姓名">
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <input type="text" name="last_name1" id="last_name1" class="form-control" placeholder="Last Name">
-                                </div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <input type="email" name="email1" id="email1" class="form-control" placeholder="Your Email">
-                                </div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <input type="text" name="phone1" id="phone1" class="form-control" placeholder="Your Phone">
+                                    <input type="email" name="email1" id="email1" class="form-control" placeholder="电话">
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                     <label class="sr-only">Select Time</label>
                                     <select name="select_service1" id="select_service1" class="selectpicker form-control" data-style="btn-white">
-                                        <option value="selecttime">Select Time</option>
+                                        <option value="selecttime">业务</option>
                                         <option value="Weekdays">Weekdays</option>
+                                        <option value="Weekend">Weekend</option>
                                         <option value="Weekend">Weekend</option>
                                     </select>
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <label class="sr-only">What is max price?</label>
-                                    <select name="select_price1" id="select_price1" class="selectpicker form-control" data-style="btn-white">
-                                        <option value="$100 - $2000">$100 - $2000</option>
-                                        <option value="$2000 - $4000">$2000 - $4000</option>
-                                        <option value="$4000 - $10000">$4000 - $10000</option>
-                                    </select>
-                                </div>
                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-                                    <button type="submit" value="SEND" id="submit1" class="btn btn-light btn-radius btn-brd grd1 btn-block">Get an Appointment</button>
+                                    <button type="submit" value="SEND" id="submit1" class="btn btn-light btn-radius btn-brd grd1 btn-block">提交</button>
                                 </div>
                             </fieldset>
                         </form>
@@ -137,7 +124,6 @@
                     <div class="big-tagline clearfix">
                         <h2>Sell Your Property with CITY Real Estate</h2>
                         <p class="lead">With CITY Real Estate responsive landing page template, you can promote your all property & real estate projects. </p>
-                        <a data-scroll href="#gallery" class="btn btn-light btn-radius grd1 btn-brd">View Gallery</a>
                     </div>
                 </div>
             </div><!-- end row -->
@@ -406,13 +392,6 @@
             <div class="footer-distributed">
                 <div class="footer-left">
                     <p class="footer-company-name">All Rights Reserved. &copy; 2018 <a href="#">City Real Estate</a> by html design- More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
-                </div>
-
-                <div class="footer-right">
-                    <form method="get" action="#">
-                        <input placeholder="Subscribe our newsletter.." name="search">
-                        <i class="fa fa-envelope-o"></i>
-                    </form>
                 </div>
             </div>
         </div><!-- end container -->
