--- a/reception/index.html
+++ b/reception/index.html
@@ -62,7 +62,7 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a class="active" href="index.html">Home</a></li>
+                        <li><a class="active" href="index.html">首页</a></li>
                         <li><a href="about.html">About us </a></li>
                         <li><a href="service.html">Service</a></li>
                         <li><a href="gallery.html">Gallery</a></li>
