--- a/reception/index.html
+++ b/reception/index.html
@@ -122,8 +122,8 @@
                 </div>
 				<div class="col-md-6 col-sm-12">
                     <div class="big-tagline clearfix">
-                        <h2>Sell Your Property with CITY Real Estate</h2>
-                        <p class="lead">With CITY Real Estate responsive landing page template, you can promote your all property & real estate projects. </p>
+                        <h2 class="home1">Sell Your Property with CITY Real Estate</h2>
+                        <p class="lead home2">With CITY Real Estate responsive landing page template, you can promote your all property & real estate projects. </p>
                     </div>
                 </div>
             </div><!-- end row -->
@@ -137,33 +137,33 @@
 					<div class="item">
 						<div class="single-feature">
 							<div class="icon"><img src="uploads/icon-01.png" class="img-responsive" alt=""></div>
-							<h4><a href="#">Full Furnished</a></h4>
-							<p>Mauris eu porta orci. In at erat enim. Suspendisse felis erat, volutpat at nisl sit amet, maximus molestie nisi. </p>
+							<h4 class="home3"><a href="#">Full Furnished</a></h4>
+							<p class="home4">Mauris eu porta orci. In at erat enim. Suspendisse felis erat, volutpat at nisl sit amet, maximus molestie nisi. </p>
 						</div> 
 					</div>
 					<div class="item">
 						<div class="single-feature">
 							<div class="icon"><img src="uploads/icon-02.png" class="img-responsive" alt=""></div>
-							<h4><a href="#">Living Inside a Nature</a></h4>
-							<p>Mauris eu porta orci. In at erat enim. Suspendisse felis erat, volutpat at nisl sit amet, maximus molestie nisi.</p>
+							<h4 class="home5"><a href="#">Living Inside a Nature</a></h4>
+							<p class="home6">Mauris eu porta orci. In at erat enim. Suspendisse felis erat, volutpat at nisl sit amet, maximus molestie nisi.</p>
 						</div> 
 					</div>
 					<div class="item">
 						<div class="single-feature">
 							<div class="icon"><img src="uploads/icon-03.png" class="img-responsive" alt=""></div>
-							<h4><a href="#">Luxurious Fittings</a></h4>
-							<p>Mauris eu porta orci. In at erat enim. Suspendisse felis erat, volutpat at nisl sit amet, maximus molestie nisi. </p>
+							<h4 class="home7"><a href="#">Luxurious Fittings</a></h4>
+							<p class="home8">Mauris eu porta orci. In at erat enim. Suspendisse felis erat, volutpat at nisl sit amet, maximus molestie nisi. </p>
 						</div> 
 					</div>
 					<div class="item">
 						<div class="single-feature">
 							<div class="icon"><img src="uploads/icon-04.png" class="img-responsive" alt=""></div>
-							<h4><a href="#">Non Stop Security</a></h4>
-							<p>Lorem Is a dummy Mauris eu porta orci. In at erat enim. Suspendisse felis erat, volutpat at nisl sit amet, maximus molestie nisi. </p>
+							<h4 class="home9"><a href="#">Non Stop Security</a></h4>
+							<p class="home10">Lorem Is a dummy Mauris eu porta orci. In at erat enim. Suspendisse felis erat, volutpat at nisl sit amet, maximus molestie nisi. </p>
 						</div> 
 					</div>
 				</div>
-			</div><div class="tlinks">Collect from <a href="http://www.cssmoban.com/" >网页模板</a></div>
+			</div>
 			
 			<hr class="hr1">
 			
@@ -175,11 +175,10 @@
                 </div>
 				<div class="col-md-6">
 					<div class="message-box right-ab">
-                        <h4>Awards Winning Real Estate Company</h4>
-                        <h2>Welcome to CITY Real Estate</h2>
-                        <p>Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus. Sed a tellus quis mi rhoncus dignissim.</p>
-						<p>Aenean eleifend in felis id viverra. Vestibulum semper ex eu molestie pulvinar. Maecenas non efficitur metus, et semper sem. Mauris ligula sapien, gravida a scelerisque ut, vehicula sed mauris. Proin dapibus mi id vulputate euismod. Nam ullamcorper dui tellus, non lacinia lorem hendrerit eu. Donec at orci cursus, rutrum metus eget, cursus turpis.  </p>
-						<a href="#" class="btn btn-light btn-radius grd1 btn-brd"> Read More </a>
+                        <h4 class="home11">Awards Winning Real Estate Company</h4>
+                        <h2 class="home12">Welcome to CITY Real Estate</h2>
+                        <p class="home13">Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus. Sed a tellus quis mi rhoncus dignissim.</p>
+						<p class="home14">Aenean eleifend in felis id viverra. Vestibulum semper ex eu molestie pulvinar. Maecenas non efficitur metus, et semper sem. Mauris ligula sapien, gravida a scelerisque ut, vehicula sed mauris. Proin dapibus mi id vulputate euismod. Nam ullamcorper dui tellus, non lacinia lorem hendrerit eu. Donec at orci cursus, rutrum metus eget, cursus turpis.  </p>
                     </div>
 				</div>
 			</div>
@@ -404,8 +403,7 @@
     <!-- ALL PLUGINS -->
     <script src="js/custom.js"></script>
     <script src="js/portfolio.js"></script>
-    <script src="js/hoverdir.js"></script>    
-
+    <script src="js/hoverdir.js"></script>
 
 </body>
 </html>
