--- a/reception/properties.html
+++ b/reception/properties.html
@@ -62,7 +62,7 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index.html">首页</a></li>
                         <li><a href="about.html">About us </a></li>
                         <li><a href="service.html">Service</a></li>
                         <li><a href="gallery.html">Gallery</a></li>
@@ -408,10 +408,6 @@
     <!-- ALL PLUGINS -->
     <script src="js/custom.js"></script>
     <script src="js/portfolio.js"></script>
-    <script src="js/hoverdir.js"></script>    
-    <script src="http://maps.googleapis.com/maps/api/js?sensor=false&amp;libraries=places"></script>
-   <!-- MAP & CONTACT -->
-    <script src="js/map.js"></script>
-
+    <script src="js/hoverdir.js"></script>
 </body>
 </html>
