--- a/reception/index.html
+++ b/reception/index.html
@@ -95,7 +95,7 @@
             <div class="row">
                 <div class="col-md-6 wow slideInLeft hidden-xs hidden-sm">
                     <div class="contact_form">
-                        <h3><i class="fa fa-envelope-o grd1 global-radius"></i> 联系方式</h3>
+                        <h3 style="color: white"><i class="fa fa-envelope-o grd1 global-radius"></i> 联系方式</h3>
                         <form id="contactform1" class="row" name="contactform" method="post">
                             <fieldset class="row-fluid">
                                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
