--- a/reception/index.html
+++ b/reception/index.html
@@ -93,20 +93,20 @@
     <div class="parallax first-section">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 wow slideInLeft hidden-xs hidden-sm">
+                <div class="col-md-6 wow slideInLeft ">
                     <div class="contact_form">
                         <h3 style="color: white"><i class="fa fa-envelope-o grd1 global-radius"></i> 联系方式</h3>
                         <form id="contactform1" class="row" name="contactform" method="post">
                             <fieldset class="row-fluid">
                                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <input type="text" name="name" id="first_name1" class="form-control" placeholder="姓名">
+                                    <input type="text" name="name" id="first_name1" class="form-control x" placeholder="姓名" onchange="data()">
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <input type="email" name="email1" id="email1" class="form-control" placeholder="电话">
+                                    <input type="text" name="tel" id="tel" class="form-control" placeholder="电话">
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                     <label class="sr-only">Select Time</label>
-                                    <select name="select_service1" id="select_service1" class="selectpicker form-control" data-style="btn-white">
+                                    <select name="business" id="select_service1" class="selectpicker form-control" data-style="btn-white">
                                         <option value="selecttime">业务</option>
                                         <option value="Weekdays">Weekdays</option>
                                         <option value="Weekend">Weekend</option>
@@ -118,6 +118,14 @@
                                 </div>
                             </fieldset>
                         </form>
+                        <script>
+                             function data() {
+                                 var x = document.getElementById("first_name1");
+                                 var x = document.getElementById("tel");
+                                 var x = document.getElementById("first_name1");
+                                 console.debug(x.value);
+                             }
+                        </script>
                     </div>
                 </div>
 				<div class="col-md-6 col-sm-12">
